--- a/about.html
+++ b/about.html
@@ -18,7 +18,18 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <img src="./images/logo.svg" class="nav-logo" alt="" />
+          <a href="index.html"
+            ><h1
+              style="
+                font-size: 2rem;
+                color: #000;
+                text-shadow: 2px 2px 2px #ccc;
+                letter-spacing: 5px;
+              "
+            >
+              Ashish <span style="color: #e9b949">Chauhan</span>
+            </h1></a
+          >
           <button class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
           </button>
@@ -48,35 +59,44 @@
         <ul class="social-icons">
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.facebook.com/profile.php?id=100057201707335"
+              class="social-icon"
+            >
               <i class="fab fa-facebook"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+              class="social-icon"
+            >
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-squarespace"></i>
+            <a href="https://twitter.com/AshishC88581260" class="social-icon">
+              <i class="fab fa-twitter"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-behance"></i>
+            <a href="https://github.com/ash-arsenic" class="social-icon">
+              <i class="fab fa-github"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.instagram.com/ash__arsenic/"
+              class="social-icon"
+            >
               <i class="fab fa-instagram"></i>
             </a>
           </li>
@@ -100,15 +120,32 @@
       <!--end of section title -->
       <div class="section-center page-info">
         <!-- about page -->
-        <p>
-          Hello, I am John Doe and I am a web developer. I live and work in
-          somewhere warm. I spend most of my day, experimenting with HTML, CSS
-          and JavaScript (and its endless list of frameworks). I enjoy coding
-          and the challenge of learning something new everyday. You can also
-          find me at youtube channel
-          <a href="https://www.youtube.com/channel/UCMZFwxv5l-XtKi693qMJptA"
-            >coding addict</a
-          >
+        <p style="letter-spacing: 3px; word-spacing: 4px">
+          Hello, I am Ashish Chauhan and I am an android developer and web
+          developer. I live in Ghaziabad, UP. Currently I am pursuing my B.Tech
+          degree from KIET Group of Institutions, Ghaziabad in Information
+          Technology specialisation. I completed my 12th from CBSE with 95.6% in
+          2019. I am Currently securing 86.5% in my B.Tech.
+          <br />
+          <br />
+          I speak C, C++, Java, Python, Javascript and Bash. I have 2 years
+          experience working with Android and 1 year experience with Web. I have
+          worked with Bootstrap, Flask Api, Heroku, OkHttpClient, React JS,
+          React Native, Docker. Tools I have used till now includes Intellij
+          Idea, VS Code, Py Charm, Eclipse, Wamp Server, Vim, Android Studio,
+          Git and Github.I have also experience of working in Linux [Ubuntu and
+          Arch based distros].
+          <br />
+          <br />
+          I love development. What started out as a responsibility is now
+          turning into something without which my days are incomplete. Its now a
+          lifestyle. Knownig that I can make my mobile do anything for me. The
+          real comfort lies in the automation. Its like creating your own
+          universe. After creating every web app you feel the same way The God
+          feels after creating the universe. At the end of the day you feel
+          complete and fresh and this is the only thing that matters. If you
+          need my help just <a href="contact.html">click here</a>, you shall
+          find solution to your problem.
         </p>
       </div>
     </section>
@@ -122,42 +159,48 @@
       <ul class="social-icons">
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100057201707335"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+            class="social-icon"
+          >
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
-            <i class="fab fa-squarespace"></i>
+          <a href="https://twitter.com/AshishC88581260" class="social-icon">
+            <i class="fab fa-twitter"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
-            <i class="fab fa-behance"></i>
+          <a href="https://github.com/ash-arsenic" class="social-icon">
+            <i class="fab fa-github"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a href="https://www.instagram.com/ash__arsenic/" class="social-icon">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
         <!-- end of single item -->
       </ul>
 
-      <p>&copy; <span id="date"></span> John Doe. All rights reserved.</p>
+      <p>Who wants to be GOD when you can be a Programmer.</p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
