--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe || Contact</title>
+    <title>Ashish Chauhan || Contact</title>
     <link
       rel="stylesheet"
       href="./fontawesome-free-5.12.1-web/css/all.min.css"
@@ -18,7 +18,18 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <img src="./images/logo.svg" class="nav-logo" alt="" />
+          <a href="index.html"
+            ><h1
+              style="
+                font-size: 2rem;
+                color: #000;
+                text-shadow: 2px 2px 2px #ccc;
+                letter-spacing: 5px;
+              "
+            >
+              Ashish <span style="color: #e9b949">Chauhan</span>
+            </h1></a
+          >
           <button class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
           </button>
@@ -48,35 +59,44 @@
         <ul class="social-icons">
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.facebook.com/profile.php?id=100057201707335"
+              class="social-icon"
+            >
               <i class="fab fa-facebook"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+              class="social-icon"
+            >
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-squarespace"></i>
+            <a href="https://twitter.com/AshishC88581260" class="social-icon">
+              <i class="fab fa-twitter"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-behance"></i>
+            <a href="https://github.com/ash-arsenic" class="social-icon">
+              <i class="fab fa-github"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.instagram.com/ash__arsenic/"
+              class="social-icon"
+            >
               <i class="fab fa-instagram"></i>
             </a>
           </li>
@@ -102,11 +122,21 @@
         <!-- contact page-->
         <p>
           If you are looking to get ahold of me, you can send me an email at
-          <a href="mailto:email@email.com">@your_email</a>
+          <a href="mailto:ashchauhan333@email.com">ashchauhan333@gmail.com</a>
         </p>
         <p>
           You can also reach me on Twitter at
-          <a href="https://www.twitter.com">@your_social_media </a>
+          <a href="https://twitter.com/AshishC88581260">@AshishC88581260 </a>
+        </p>
+        <p>
+          Check out my Linkedin Profile
+          <a href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+            >Ashish Chauhan
+          </a>
+        </p>
+        <p>
+          Don't Forget to follow on Instagram
+          <a href="https://www.instagram.com/ash__arsenic/">@ash__arsenic </a>
         </p>
       </div>
     </section>
@@ -120,42 +150,48 @@
       <ul class="social-icons">
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100057201707335"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+            class="social-icon"
+          >
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
-            <i class="fab fa-squarespace"></i>
+          <a href="https://twitter.com/AshishC88581260" class="social-icon">
+            <i class="fab fa-twitter"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
-            <i class="fab fa-behance"></i>
+          <a href="https://github.com/ash-arsenic" class="social-icon">
+            <i class="fab fa-github"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a href="https://www.instagram.com/ash__arsenic/" class="social-icon">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
         <!-- end of single item -->
       </ul>
 
-      <p>&copy; <span id="date"></span> John Doe. All rights reserved.</p>
+      <p>Who wants to be GOD when you can be a Programmer.</p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
