--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe || Projects</title>
+    <title>Ashish Chauhan || Projects</title>
     <link
       rel="stylesheet"
       href="./fontawesome-free-5.12.1-web/css/all.min.css"
@@ -18,7 +18,18 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <img src="./images/logo.svg" class="nav-logo" alt="" />
+          <a href="index.html"
+            ><h1
+              style="
+                font-size: 2rem;
+                color: #000;
+                text-shadow: 2px 2px 2px #ccc;
+                letter-spacing: 5px;
+              "
+            >
+              Ashish <span style="color: #e9b949">Chauhan</span>
+            </h1></a
+          >
           <button class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
           </button>
@@ -48,35 +59,44 @@
         <ul class="social-icons">
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.facebook.com/profile.php?id=100057201707335"
+              class="social-icon"
+            >
               <i class="fab fa-facebook"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+              class="social-icon"
+            >
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-squarespace"></i>
+            <a href="https://twitter.com/AshishC88581260" class="social-icon">
+              <i class="fab fa-twitter"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-behance"></i>
+            <a href="https://github.com/ash-arsenic" class="social-icon">
+              <i class="fab fa-github"></i>
             </a>
           </li>
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.instagram.com/ash__arsenic/"
+              class="social-icon"
+            >
               <i class="fab fa-instagram"></i>
             </a>
           </li>
@@ -101,25 +121,246 @@
     <section class="section">
       <div class="section-center projects-page-center">
         <!-- single project -->
-        <article class="single-project">
+        <article class="single-project" id="finvest">
           <div class="project-container">
-            <img src="./images/project-1.jpeg" alt="single project" />
-            <a href="https://www.johnsmilga.com" class="project-icon">
+            <img
+              src="./images/project-1.jpeg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
               <i class="fas fa-home"></i>
             </a>
           </div>
           <div class="project-details">
-            <h4>project name</h4>
+            <h4>finvest</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              eveniet amet odit aperiam, provident cum possimus sapiente minus
-              quos! Ipsum?
+              This app is connected with ML model using Flask api in the
+              backend. The app makes connection with Flask api using Heroku and
+              OkHttpClient to connect with the api.
             </p>
             <div class="project-footer">
               <span>
                 <i class="fab fa-github"></i>
               </span>
-              <a href="https://www.github.com">source code</a>
+              <a href="https://github.com/ash-arsenic/finvest-app"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="only-films">
+          <div class="project-container">
+            <img
+              src="./images/project-2.jpeg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Only Films</h4>
+            <p>
+              This app uses TheMovieDB api to shows the latest movies
+              information. It makes connection with api using OkHttpClient. It
+              also uses firebase for user authentication.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://github.com/ash-arsenic/letterboxd"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="comfy-store">
+          <div class="project-container">
+            <img
+              src="./images/project-3.jpeg"
+              class="my-image"
+              alt="single project"
+            />
+            <a
+              href="https://arsenic-comfy-store.netlify.app/"
+              class="project-icon"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>comfy store</h4>
+            <p>
+              This webapp is developed using html, css bootstrap and javascript.
+              It uses many features of bootstrap. It also uses web browser local
+              storage to store some data.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/ash-arsenic/web-mijects/tree/main/comfy-store"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="100-days">
+          <div class="project-container">
+            <img
+              src="./images/project-4.jpeg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>100 days of code</h4>
+            <p>
+              This app keeps running in the background and shows notification
+              all the time. It runs a timer in the background which is used to
+              display new question every 24 hours.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://github.com/ash-arsenic/a100daysofcode-app"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="pes">
+          <div class="project-container">
+            <img
+              src="./images/project-5.jpg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Pes Tournament maker</h4>
+            <p>
+              This app uses basic concepts of Android like Recycler view, view
+              pager, fragments, shared preferences etc. to show tables, fixtures
+              and record data.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://github.com/ash-arsenic/Pes-Tournament-Maker"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="pharmacy">
+          <div class="project-container">
+            <img
+              src="./images/project-6.jpg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Pharmacy management Sys.</h4>
+            <p>
+              This project is based on java which uses Swing java GUI library.
+              It is connected with mysql databse using jdbc. User can track
+              medicine data and print bills for customers.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://github.com/ash-arsenic/miniProject"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="docker">
+          <div class="project-container">
+            <img
+              src="./images/project-1.jpeg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Cloud Computing</h4>
+            <p>
+              This project uses Docker to setup a Mysql database with php server
+              automatically. When the task is comleted successfully it shows the
+              mysql version on port 8080.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/ash-arsenic/docker-php-mysql-container"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project" id="fitness">
+          <div class="project-container">
+            <img
+              src="./images/project-3.jpeg"
+              class="my-image"
+              alt="single project"
+            />
+            <a href="https://github.com/ash-arsenic" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Fitness App</h4>
+            <p>
+              This app uses SQLiteDatabase for exercises, Shared Preferences for
+              recording stats, Firebase for chat service and also calculate the
+              calories burnt.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://github.com/ash-arsenic/fitness_app"
+                >source code</a
+              >
             </div>
           </div>
         </article>
@@ -136,43 +377,50 @@
       <ul class="social-icons">
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100057201707335"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ashish-chauhan-b0371a222/"
+            class="social-icon"
+          >
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
-            <i class="fab fa-squarespace"></i>
+          <a href="https://twitter.com/AshishC88581260" class="social-icon">
+            <i class="fab fa-twitter"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
-            <i class="fab fa-behance"></i>
+          <a href="https://github.com/ash-arsenic" class="social-icon">
+            <i class="fab fa-github"></i>
           </a>
         </li>
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a href="https://www.instagram.com/ash__arsenic/" class="social-icon">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
         <!-- end of single item -->
       </ul>
 
-      <p>&copy; <span id="date"></span> John Doe. All rights reserved.</p>
+      <p>Who wants to be GOD when you can be a Programmer</p>
     </footer>
+
     <script src="./js/app.js"></script>
   </body>
 </html>
