--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,7 @@
         <!-- nav header -->
         <div class="nav-header">
           <a href="index.html"
-            ><h1
-              style="
-                font-size: 2rem;
-                color: #000;
-                text-shadow: 2px 2px 2px #ccc;
-                letter-spacing: 5px;
-              "
-            >
+            ><h1 class="my-icon">
               Ashish <span style="color: #e9b949">Chauhan</span>
             </h1></a
           >
